--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,16 @@
-.center { 
+.body {
+    max-width: 980px;
+    margin: 20px;
+}
+
+div {
+    display: block;
+}
+
+article {
+    padding: 10px;
     text-align: center;
-   }
+}
 
 .navbar {
     overflow: hidden;
@@ -42,7 +52,7 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    /*min-width: 160px;*/
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -62,4 +72,18 @@
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.iframe {
+    width: 100%;
+}
+
+footer {
+    text-align: center;
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 7px;
+    padding: 10px 16px;
+    text-decoration: none;
 }
